add author field

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,7 @@ layout: default
         </span>
 
         <h1 class="post-title">{{ page.title | escape }}</h1>
+        <span style="font-size: small;" class="post-title">{{ page.author | escape }}</span>
 
         <div class="post__info">
           <div class="post__author">
